Changed to Parcel packaging. Security alerts fixed.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
     "extends": "airbnb-base",
     "rules": {
         "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
+    },
+    "env": {
+        "browser": true,
+        "node": true,
+        "mocha": true
     }
 }
