--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "path-warp-paper",
-  "version": "0.1.3",
+  "version": "0.2.1",
   "description": "Warp a path to fit other boundary paths. Paper.js implementation.",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "mocha --require babel-polyfill --compilers js:babel-register",
-    "build": "babel src -d build",
-    "demo": "webpack-dev-server",
-    "lint": "eslint src",
-    "prepare": "npm run lint && npm run build"
+    "build": "parcel build src/index.js",
+    "pretest": "mv ./node_modules/jsdom ./node_modules/jsdom-ignore || echo",
+    "test": "parcel build ./test/PathWarp.test.js --out-dir dist_test --target node && mocha dist_test",
+    "demo": "parcel ./demo/demo.html --no-source-maps",
+    "lint": "eslint src test demo",
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "pre-commit": [
     "lint",
@@ -29,21 +30,23 @@
   },
   "homepage": "https://github.com/ryascl/path-warp-paper.js#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
+    "@babel/register": "^7.5.5",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
-    "imports-loader": "^0.7.1",
-    "mocha": "^3.5.0",
-    "opentype.js": "^0.7.3",
-    "pre-commit": "^1.2.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^3.1.11"
+    "mocha": "^6.2.0",
+    "parcel-bundler": "^1.12.3",
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
+    "opentype.js": "^0.7.3",
     "paper": "^0.11.4"
-  }
+  },
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist/index.*"
+  ]
 }
