--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryascl/path-warp-paper.js.git"
+    "url": "git+https://github.com/rpisryan/path-warp-paper.js.git"
   },
   "keywords": [
     "font",
     "vector"
   ],
-  "author": "Ryan Smith <ryascl@codeflight.io> (https://github.com/ryascl)",
+  "author": "Ryan Smith <rys@pobox.com> (https://github.com/rpisryan)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ryascl/path-warp-paper.js/issues"
+    "url": "https://github.com/rpisryan/path-warp-paper.js/issues"
   },
-  "homepage": "https://github.com/ryascl/path-warp-paper.js#readme",
+  "homepage": "https://github.com/rpisryan/path-warp-paper.js#readme",
   "devDependencies": {
-    "@babel/register": "^7.5.5",
+    "@babel/register": "^7.14.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0",
-    "mocha": "^6.2.0",
-    "parcel-bundler": "^1.12.3",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "mocha": "^9.0.0",
+    "parcel-bundler": "^1.10.3",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "opentype.js": "^0.7.3",
-    "paper": "^0.11.4"
+    "opentype.js": "^1.3.3",
+    "paper": "^0.12.15"
   },
   "files": [
     "LICENSE",
